--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for delivery logistics",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch --env-file .env src/server.ts"
   },
   "keywords": [],
   "author": "Fabio Delong <frdelong@gmail.com>",
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.12",
+    "prisma": "^5.19.1",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
