--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for delivery logistics",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file .env src/server.ts"
+    "dev": "tsx watch --env-file .env src/server.ts",
+    "test:dev": "NODE_OPTIONS=--experimental-vm-modules npx jest --watchAll --runInBand"
   },
   "keywords": [],
   "author": "Fabio Delong <frdelong@gmail.com>",
@@ -29,6 +30,7 @@
     "prisma": "^5.19.1",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
